--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-  "name": "lms/client",
-  "description": "Library to make requests to LMS service.",
-  "type": "library",
-  "keywords": ["lms"],
+  "name": "inleadmedia/lms-library",
+  "description": "Provides integration with LMS services",
+  "require": {
+    "php": ">=5.6.0"
+  },
   "autoload": {
     "psr-4": {
-      "LMS\\Client\\": "src"
+      "LMS\\": "src/"
     }
-  },
-  "minimum-stability": "dev"
+  }
 }
