--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "inleadmedia/lms-client",
   "description": "Provides integration with LMS services",
   "require": {
-    "php": ">=5.6.0"
+    "php": "^7.3.0"
   },
   "autoload": {
     "psr-4": {
